2001-10-25  Per Abrahamsen  <abraham@dina.kvl.dk>

	* path.h, path.C: New utility.
	* options.h, option.C, common.h: Use it.
	* lexer.h, lexer.C: Use it.
	* daisy.C (load_syntax): Add "path" and "directory".
	* parser_file.C (load_list): Use it.

2001-10-23  Per Abrahamsen  <abraham@dina.kvl.dk>

	* log_harvest.C (LogHarvest): Added missing backslash.

2001-10-19  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 1.84 released.

2001-10-19  Per Abrahamsen  <abraham@dina.kvl.dk>

	* macro_std.C (tick): Handle fully saturated soil.

2001-10-12  Per Abrahamsen  <abraham@dina.kvl.dk>

	* COPYING, COPYING.LIB: New files.
	* Makefile (TEXT): Added them.
	* all: Added copyright notices.

2001-10-10  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 1.83 released.

2001-10-10  Per Abrahamsen  <abraham@dina.kvl.dk>

	* common.h: Distinguish between Borland C++ 5.0 and 5.5.
	* lexer.h, lexer.C: Ditto.
	* options.C: [__BORLANDC__] Include <dir.h> here.

	* crop_std.C (harvest): Log economic yield for C.

2001-10-09  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 1.82 released.

2001-10-09  Per Abrahamsen  <abraham@dina.kvl.dk>

	* crop_simple.C, crop_std.C, crop_old.C, crop_sold.C (harvest):
	Update callers. 

	* log_harvest.C (match): Use it.

	* harvest.C, harvest.h (stem_C, dead_C, leaf_C, sorg_C): New members.

2001-10-03  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 1.80 released.

2001-10-02  Per Abrahamsen  <abraham@dina.kvl.dk>

	* am.C (add): Always add both C and N, never rely on a fixed C/N
	ratio. 
	(add): Simplified assertions.

	* mactrans_std.C (tick): Handle upstream macropores.

2001-09-28  Per Abrahamsen  <abraham@dina.kvl.dk>

	* depend.C (object_desc): Fixed call by value strings.

2001-09-27  Per Abrahamsen  <abraham@dina.kvl.dk>

	* all: CVS synched with Cygwin and Borland versions.

2001-09-10  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 1.79 released.

2001-09-10  Per Abrahamsen  <abraham@dina.kvl.dk>
