@@ -38,6 +38,9 @@ public:
   virtual void print_comment (const string& comment) = 0;
   // Print content of alist.
   virtual void print_alist (const AttributeList& alist, const Syntax&) = 0;
+  // Print entry in alist.
+  virtual void print_entry (const AttributeList&, const Syntax&,
+			    const string& key) = 0;
   // Print all elements in all libraries associated with 'filename'.
   virtual void print_library_file (const string& filename) = 0;
   // Print a parser input.
